bugfix on ios

--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -289,6 +289,9 @@ body.down #sHeaderNav.clone {
 	z-index: 2;
 	transform: translateY(-100%);
 	transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+	-webkit-touch-callout:none;
+	-webkit-user-select: none;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 #sHeaderNav.clone .headerLine{
 	padding-top: 13px;
@@ -297,6 +300,9 @@ body.down #sHeaderNav.clone {
 }
 #sHeaderNav.clone .headerLine:before{
 	height: 36px;
+}
+.mainNavMobile{
+	cursor: pointer;
 }
 .mainNavMobile span{
 	font-size: 2em;
